# compile-time-simd-blend-mask

./: README.md
src/: CMakeLists.txt  blend256.h  calculate_int_for_blend_epi32.h  check_num_bytes_mask.h  clang-format.sh  convert_tuplemask_to_mm256i.h  main.cc  to_tuple_partition_combinebytes.h  tuplemask_for_bigger_integers.h  verify_blend_result.h
